--- a/UyghurOCR.csproj
+++ b/UyghurOCR.csproj
@@ -215,8 +215,8 @@
     <None Include="tessdata\uig.traineddata">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="tessdata\uig_kona.traineddata">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="tessdata\ukij.traineddata">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
