--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Genesis.Tesseract4" version="4.0.2.11" targetFramework="net452" />
-  <package id="iTextSharp" version="5.5.13.1" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net452" />
+  <package id="Tesseract" version="4.1.1" targetFramework="net452" />
 </packages>
