--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="iTextSharp" version="5.5.13.1" targetFramework="net452" />
-  <package id="Tesseract" version="4.1.1" targetFramework="net452" />
+  <package id="Clipper2" version="1.5.4" targetFramework="net48" />
+  <package id="Microsoft.ML.OnnxRuntime" version="1.22.0" targetFramework="net48" />
+  <package id="Microsoft.ML.OnnxRuntime.Managed" version="1.22.0" targetFramework="net48" />
+  <package id="OpenCvSharp4" version="4.11.0.20250507" targetFramework="net48" />
+  <package id="OpenCvSharp4.Extensions" version="4.11.0.20250507" targetFramework="net48" />
+  <package id="OpenCvSharp4.runtime.win" version="4.11.0.20250507" targetFramework="net48" />
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net48" />
+  <package id="PdfiumViewer.Native.x86_64.no_v8-no_xfa" version="2018.4.8.256" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="9.0.6" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
+  <package id="Tesseract" version="5.2.0" targetFramework="net48" />
 </packages>
